# 3DUS-eye-pipeline

./: Posterior Globe Metrics.py  README.md  phantom_calibration_slicer.py  run_uceye.bat.txt  run_uceye.command  uc_eye_pipeline.py  uc_eye_pipeline_v1.1.py  uc_eye_preprocess.py
uc_eye v2/: Posterior Globe Metrics.py  data_loader.py  eye_config.yaml  frame_exporter.py  geometry_calculator.py  horizontal_slicer.py  interpolator.py  main_pipeline.py  nrrd_exporter.py  requirements.txt  run_uceye.command
uceye_package/: README.md  pyproject.toml
uceye_package/src/uceye/: __init__.py  calibration.py  cli.py  config.py  geometry.py  io_utils.py  pipeline.py  qc.py  recon.py  registration.py  seam.py  unwrap.py
uceye_package/tests/: test_geometry.py  test_recon.py
